WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197930
REGRESSION (
r245072
): Missing code in Document::styleColorOptions to propagate StyleColor::Options::UseInactiveAppearance
https://bugs.webkit.org/show_bug.cgi?id=197930
Summary
REGRESSION (r245072): Missing code in Document::styleColorOptions to propagat...
Timothy Hatcher
Reported
2019-05-15 15:47:33 PDT
Some code was missed in my initial patch (
r245072
) that didn't propagate StyleColor::Options::UseInactiveAppearance from the Page. <
rdar://problem/49833954
>
Attachments
Patch
(2.65 KB, patch)
2019-05-15 15:55 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(3.22 KB, patch)
2019-05-15 16:09 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-05-15 15:55:41 PDT
Comment hidden (obsolete)
Created
attachment 370002
[details]
Patch
Wenson Hsieh
Comment 2
2019-05-15 15:58:37 PDT
Comment on
attachment 370002
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=370002&action=review
> Source/WebCore/dom/Document.cpp:6941 > + if (Page* documentPage = page())
Nit - auto*
Megan Gardner
Comment 3
2019-05-15 16:02:04 PDT
Comment on
attachment 370002
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=370002&action=review
> Source/WebCore/dom/Document.cpp:6943 > + return useInactiveAppearance;
Couldn't this just be if (Page* documentPage = page()) return documentPage->useInactiveAppearance(); return false;
Timothy Hatcher
Comment 4
2019-05-15 16:09:17 PDT
Created
attachment 370006
[details]
Patch
WebKit Commit Bot
Comment 5
2019-05-15 16:50:40 PDT
Comment on
attachment 370006
[details]
Patch Clearing flags on attachment: 370006 Committed
r245368
: <
https://trac.webkit.org/changeset/245368
>
WebKit Commit Bot
Comment 6
2019-05-15 16:50:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug